--- a/ecommerce/_includes/product_item.html
+++ b/ecommerce/_includes/product_item.html
@@ -1,12 +1,12 @@
 <div class="col-md-4">
     <div class="card mb-4 shadow-sm">
-        <a href="/products/{{product.sku}}">
+        <a href="/products/{{product.sku | slugify }}.html">
             <img src="https://picsum.photos/id/{{ 100 | random_number }}/200" 
                 class="card-img-top" alt="{{product.title}}">
         </a>
         <div class="card-body">
             <p class="card-text">
-                <a href="/products/{{product.sku}}">{{product.title}}</a>
+                <a href="/products/{{product.sku | slugify }}.html">{{product.title}}</a>
             </p>
             <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">R$ {{product.price}},99</small>
