Set User-id and product-id in GA

--- a/ecommerce/_layouts/default.html
+++ b/ecommerce/_layouts/default.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
     <head>
+        <script src="/assets/js/js.cookie.min.js"></script>
         {% include analytics.html %}
         
         <!-- Meta -->
