--- a/ecommerce/_includes/analytics.html
+++ b/ecommerce/_includes/analytics.html
@@ -3,12 +3,21 @@
 
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  function gtag() { dataLayer.push(arguments); }
   gtag('js', new Date());
 
   gtag('config', 'UA-166855025-1');
-  
-  /* 
-   gtag('set', {'user_id': 'USER_ID'});
-  */
+
+  // get user-id
+  const urlParams = new URLSearchParams(window.location.search);
+  const user_id = urlParams.get('user-id') || Cookies.get('user_id');
+  if (user_id) {
+    gtag('set', { 'user_id': user_id });
+
+    Cookies.set('user_id', user_id);
+  }
+
+  {% if page.sku %}
+  gtag('set', 'dimension1', '{{ page.sku }}');
+  {% endif %}
 </script>
