--- a/ecommerce/_includes/product_item.html
+++ b/ecommerce/_includes/product_item.html
@@ -1,7 +1,7 @@
 <div class="col-md-4">
     <div class="card mb-4 shadow-sm">
         <a href="/products/{{product.sku | slugify }}.html">
-            <img src="https://picsum.photos/id/{{ 100 | random_number }}/200" 
+            <img src="https://picsum.photos/seed/{{ 1000 | random_number }}/200" 
                 class="card-img-top" alt="{{product.title}}">
         </a>
         <div class="card-body">
